--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "uuid": "^10.0.0"
