--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -20,7 +20,7 @@
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
