--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "country-state-city": "^3.2.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
