--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "country-state-city": "^3.2.1",
@@ -18,6 +19,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-scroll-motion": "^0.3.3",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
