--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.7",
     "country-state-city": "^3.2.1",
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
