--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "razorpay": "^2.9.5",
     "uuid": "^10.0.0"
   }
 }
