--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -17,7 +17,10 @@
     "country-state-city": "^3.2.1",
     "emailjs-com": "^3.2.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.15.0",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.2",
+    "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
