--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-razorpay": "^3.0.1",
     "react-redux": "^9.1.2",
     "react-scroll-motion": "^0.3.3",
     "react-toastify": "^10.0.6",
