--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.15.0",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.469.0",
     "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
