add: added AddMenu.jsx and working to improvise the form logic in it

--- a/frontEnd/jsconfig.json
+++ b/frontEnd/jsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
-  },
-  "include": ["src/**/*"]
+  }
 }
-
