--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookie-parser": "^1.4.7",
     "country-state-city": "^3.2.1",
     "emailjs-com": "^3.2.0",
@@ -33,10 +36,13 @@
     "react-redux": "^9.1.2",
     "react-scroll-motion": "^0.3.3",
     "react-toastify": "^10.0.6",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.13.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
@@ -49,6 +55,7 @@
     "postcss": "^8.4.47",
     "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
