--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -25,6 +25,7 @@
     "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
+    "nodemailer": "^6.10.0",
     "pdf-lib": "^1.17.1",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
