--- a/frontEnd/.env.local
+++ b/frontEnd/.env.local
@@ -1,2 +1,3 @@
-EMAIL="oreximus@gmail.com";
-PASSWORD=""
+RAZORPAY_API_KEY = "rzp_test_q4DtEpdd3qZJIT"
+RAZORPAY_API_SECRET = "35OHB2MWZok8t1wa7HG8ggys"
+MERVHANT_ID = "HxcliXGRtoU0jl"
