--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -23,6 +23,8 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "html5-qrcode": "^2.3.8",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.469.0",
     "nodemailer": "^6.10.0",
@@ -31,6 +33,7 @@
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-razorpay": "^3.0.1",
