--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.1",
     "joi": "^17.13.3",
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
