--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^2.10.5",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.3.0",
     "react-razorpay": "^3.0.1",
     "react-redux": "^9.1.2",
